--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Sharafat Ahmed <asabir24@gmail.com>",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "0.19.2",
     "bootstrap": "4.4.1",
     "gatsby": "2.19.10",
     "gatsby-image": "2.2.37",
@@ -22,7 +22,7 @@
     "gatsby-plugin-sharp": "2.3.10",
     "gatsby-plugin-sitemap": "2.2.24",
     "gatsby-remark-autolink-headers": "2.1.22",
-    "gatsby-remark-copy-linked-files": "^2.1.33",
+    "gatsby-remark-copy-linked-files": "2.1.33",
     "gatsby-remark-images": "3.1.39",
     "gatsby-remark-prismjs": "3.3.29",
     "gatsby-remark-responsive-iframe": "2.2.30",
@@ -30,12 +30,12 @@
     "gatsby-source-filesystem": "2.1.43",
     "gatsby-transformer-remark": "2.6.45",
     "gatsby-transformer-sharp": "2.3.9",
-    "moment": "^2.24.0",
+    "moment": "2.24.0",
     "node-sass": "4.13.0",
     "prismjs": "1.18.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
-    "react-datepicker": "^2.14.0",
+    "react-datepicker": "2.14.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
     "react-icons": "3.8.0",
