--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
+    "chart.js": "^2.9.3",
     "gatsby": "2.19.10",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-catch-links": "2.1.21",
@@ -35,6 +36,7 @@
     "prismjs": "1.18.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
+    "react-chartjs-2": "^2.9.0",
     "react-datepicker": "2.14.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
