--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "gatsby-remark-autolink-headers": "2.1.22",
     "gatsby-remark-copy-linked-files": "2.1.33",
     "gatsby-remark-images": "3.1.39",
-    "gatsby-remark-prismjs": "3.3.29",
     "gatsby-remark-responsive-iframe": "2.2.30",
     "gatsby-remark-smartypants": "2.1.19",
     "gatsby-source-filesystem": "2.1.43",
@@ -33,18 +32,12 @@
     "gatsby-transformer-sharp": "2.3.9",
     "moment": "2.24.0",
     "node-sass": "4.13.0",
-    "prismjs": "1.18.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-chartjs-2": "^2.9.0",
-    "react-datepicker": "2.14.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
-    "react-icons": "3.8.0",
-    "react-typography": "0.16.19",
-    "reactstrap": "8.2.0",
-    "typography": "0.16.19",
-    "typography-theme-wordpress-2016": "0.16.19"
+    "reactstrap": "8.2.0"
   },
   "devDependencies": {
     "prettier": "1.19.1"
