--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
+    "react-select": "^3.1.0",
     "reactstrap": "8.2.0"
   },
   "devDependencies": {
