--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
-    "chart.js": "^2.9.3",
+    "chart.js": "2.9.3",
     "gatsby": "2.19.10",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-catch-links": "2.1.21",
@@ -27,17 +27,17 @@
     "gatsby-remark-responsive-iframe": "2.2.30",
     "gatsby-remark-smartypants": "2.1.19",
     "gatsby-source-filesystem": "2.1.43",
-    "gatsby-source-rest-api": "^0.2.3",
+    "gatsby-source-rest-api": "0.2.3",
     "gatsby-transformer-remark": "2.6.45",
     "gatsby-transformer-sharp": "2.3.9",
     "moment": "2.24.0",
     "node-sass": "4.13.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
-    "react-chartjs-2": "^2.9.0",
+    "react-chartjs-2": "2.9.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
-    "react-select": "^3.1.0",
+    "react-select": "3.1.0",
     "reactstrap": "8.2.0"
   },
   "devDependencies": {
