--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-chartjs-2": "2.9.0",
+    "react-datepicker": "2.14.1",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
     "react-select": "3.1.0",
